Bug tracker at http://code.google.com/p/psutil/issues

0.5.0 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue #52: (Linux, Windows) get process environment variables.
 * Issue #229: list users currently connected on the system (psutil.get_users()).
 * Issue #238: (Linux, Windows) process CPU affinity (get and set).
 * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.

BUGFIXES

 * Issue #193: psutil.Popen constructor can throw an exception if the spawned
   process terminates quickly.
 * Issue #240: (OSX) incorrect use of free() for Process.get_connections().
 * Issue #244: (POSIX) Process.wait() can hog CPU resources if called against
   a process which is not our children.
 * Issue #248: (Linux) psutil.network_io_counters() might return erroneous NIC
   names.
 * Issue #252: (Windows) process getcwd() erroneously raise NoSuchProcess for
   processes owned by another user.  It now raises AccessDenied instead.


0.4.1 - 2011-12-14
------------------

BUGFIXES

 * Issue 228: some example scripts were not working with python 3.
 * Issue 230: (Windows / OSX) memory leak in Process.get_connections().
 * Issue 232: (Linux) psutil.phymem_usage() can report erroneous values which
   are different than "free" command.
 * Issue 236: (Windows) memory/handle leak in Process's get_memory_info(),
   suspend() and resume() methods.


0.4.0 - 2011-10-29
------------------

NEW FEATURES

 * Issue 150: network I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 154: (FreeBSD) add support for process getcwd()
 * Issue 157: (Windows) provide installer for Python 3.2 64-bit.
 * Issue 198: Process.wait(timeout=0) can now be used to make wait() return
   immediately.
 * Issue 206: disk I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 213: examples/iotop.py script.
 * Issue 217: Process.get_connections() now has a "kind" argument to filter
   for connections with different criteria.